confict resolve and add office chategory

--- a/office statioery6.html
+++ b/office statioery6.html
@@ -74,7 +74,9 @@
     <div class="card" data-id="prod-1748513126274-4278">
   <div class="discount-banner">SAVE ₹7 (10% OFF)</div>
   <div class="product-image">
-    <img src="./office Stationery1/page6/DOMS Fusion Pencil – A Pack of 10.webp" alt="DOMS Fusion Pencil – A Pack of 10">
+    <a href="product/DOMS Fusion Pencil – A Pack of 10.html">
+      <img src="./office Stationery1/page6/DOMS Fusion Pencil – A Pack of 10.webp" alt="DOMS Fusion Pencil – A Pack of 10">
+    </a>
   </div>
   <div class="product-details">
     <h3>DOMS Fusion Pencil – A Pack of 10 <br> &#8203;</h3>
@@ -99,7 +101,9 @@
   <div class="card" data-id="prod-1748513192068-645">
   <div class="discount-banner">SAVE ₹7 (10% OFF)</div>
   <div class="product-image">
-    <img src="./office Stationery1/page6/Camlin Supreme HD Pencil.webp" alt="Camlin Supreme HD Pencil A Pack of 10 Pencil">
+    <a href="product/Camlin Supreme HD Pencil A Pack of 10 Pencil.html">
+      <img src="./office Stationery1/page6/Camlin Supreme HD Pencil.webp" alt="Camlin Supreme HD Pencil A Pack of 10 Pencil">
+    </a>
   </div>
   <div class="product-details">
     <h3>Camlin Supreme HD Pencil A Pack of 10 Pencil</h3>
@@ -123,7 +127,9 @@
  <div class="card" data-id="prod-1748513272560-1633">
   <div class="discount-banner">SAVE ₹7 (10% OFF)</div>
   <div class="product-image">
-    <img src="./office Stationery1/page6/DOMS Daddy’s Princess Pencil.webp" alt="DOMS Daddy’s Princess Pencil Pack of 10 Pencil">
+   <a href="product/DOMS Daddy’s Princess Pencil Pack of 10 Pencil.html">
+     <img src="./office Stationery1/page6/DOMS Daddy’s Princess Pencil.webp" alt="DOMS Daddy’s Princess Pencil Pack of 10 Pencil">
+   </a>
   </div>
   <div class="product-details">
     <h3>DOMS Daddy’s Princess Pencil Pack of 10 Pencil</h3>
@@ -147,7 +153,9 @@
  <div class="card" data-id="prod-1748513383669-8910">
   <div class="discount-banner">SAVE ₹7 (10% OFF)</div>
   <div class="product-image">
-    <img src="./office Stationery1/page6/Munix Scissor – Easy Fold.webp" alt="Munix Scissor – Easy Fold 112 mm">
+    <a href="product/Munix Scissor – Easy Fold 112 mm.html">
+      <img src="./office Stationery1/page6/Munix Scissor – Easy Fold.webp" alt="Munix Scissor – Easy Fold 112 mm">
+    </a>
   </div>
   <div class="product-details">
     <h3>Munix Scissor – Easy Fold 112 mm <br> &#8203;</h3>
@@ -173,7 +181,9 @@
  <div class="card" data-id="prod-1748513465538-9559">
   <div class="discount-banner">SAVE ₹7 (10% OFF)</div>
   <div class="product-image">
-    <img src="./office Stationery1/page6/Box File.webp" alt="Box File Design May Vary">
+    <a href="product/Box File Design May Vary.html">
+      <img src="./office Stationery1/page6/Box File.webp" alt="Box File Design May Vary">
+    </a>
   </div>
   <div class="product-details">
     <h3>Box File Design May Vary <br> &#8203;<br> &#8203;</h3>
@@ -199,7 +209,9 @@
  <div class="card" data-id="prod-1748513540144-6572">
   <div class="discount-banner">SAVE ₹7 (10% OFF)</div>
   <div class="product-image">
-    <img src="./office Stationery1/page6/Camlin Exam Sharpener.webp" alt="Camlin Exam Sharpener (Pack of 20)">
+    <a href="product/Camlin Exam Sharpener (Pack of 20).html">
+      <img src="./office Stationery1/page6/Camlin Exam Sharpener.webp" alt="Camlin Exam Sharpener (Pack of 20)">
+    </a>
   </div>
   <div class="product-details">
     <h3>Camlin Exam Sharpener (Pack of 20) <br> &#8203;</h3>
@@ -224,7 +236,9 @@
  <div class="card" data-id="prod-1748513601857-8382">
   <div class="discount-banner">SAVE ₹7 (10% OFF)</div>
   <div class="product-image">
-    <img src="./office Stationery1/page6/Sundaram Single Line Notebook.webp" alt="Sundaram Single Line Notebook A4 Size | 172 Page">
+    <a href="product/Sundaram Single Line Notebook A4 Size.html">
+      <img src="./office Stationery1/page6/Sundaram Single Line Notebook.webp" alt="Sundaram Single Line Notebook A4 Size | 172 Page">
+    </a>
   </div>
   <div class="product-details">
     <h3>Sundaram Single Line Notebook A4 Size | 172 Page<br> &#8203;</h3>
@@ -250,7 +264,9 @@
  <div class="card" data-id="prod-1748513644762-9621">
   <div class="discount-banner">SAVE ₹7 (10% OFF)</div>
   <div class="product-image">
-    <img src="./office Stationery1/page6/Kangaro HD-10D Stapler.webp" alt="Kangaro HD-10D Stapler Colour May Vary">
+    <a href="product/Kangaro HD-10D Stapler Colour May Vary.html">
+      <img src="./office Stationery1/page6/Kangaro HD-10D Stapler.webp" alt="Kangaro HD-10D Stapler Colour May Vary">
+    </a>
   </div>
   <div class="product-details">
     <h3>Kangaro HD-10D Stapler Colour May Vary <br> &#8203;</h3>
@@ -276,7 +292,9 @@
  <div class="card" data-id="prod-1748513701048-5686">
   <div class="discount-banner">SAVE ₹7 (10% OFF)</div>
   <div class="product-image">
-    <img src="./office Stationery1/page6/Kangaro DP-280 Paper Punch.webp" alt="Kangaro DP-280 Paper Punch Colour may vary">
+   <a href="product/Kangaro DP-280 Paper Punch Colour.html">
+     <img src="./office Stationery1/page6/Kangaro DP-280 Paper Punch.webp" alt="Kangaro DP-280 Paper Punch Colour may vary">
+   </a>
   </div>
   <div class="product-details">
     <h3>Kangaro DP-280 Paper Punch Colour may vary<br> &#8203;</h3>
@@ -302,7 +320,9 @@
  <div class="card" data-id="prod-1748513764230-2037">
   <div class="discount-banner">SAVE ₹10 (11% OFF)</div>
   <div class="product-image">
-    <img src="./office Stationery1/page6/Kangaro DP-600 Paper Punch.webp" alt="Kangaro DP-600 Paper Punch Colour may vary">
+    <a href="product/Kangaro DP-600 Paper Punch Colour may vary.html">
+      <img src="./office Stationery1/page6/Kangaro DP-600 Paper Punch.webp" alt="Kangaro DP-600 Paper Punch Colour may vary">
+    </a>
   </div>
   <div class="product-details">
     <h3>Kangaro DP-600 Paper Punch Colour may vary<br> &#8203;</h3>
@@ -327,7 +347,9 @@
  <div class="card" data-id="prod-1748513826435-7007">
   <div class="discount-banner">SAVE ₹10 (11% OFF)</div>
   <div class="product-image">
-    <img src="./office Stationery1/page6/Sundaram Winner Jumbo Book.webp" alt="Sundaram Winner Jumbo Book Size- 20.3 x 32.5 cm | 184 Pages">
+    <a href="product/Sundaram Winner Jumbo Book Size- 20.3 x 32.5 cm.html">
+      <img src="./office Stationery1/page6/Sundaram Winner Jumbo Book.webp" alt="Sundaram Winner Jumbo Book Size- 20.3 x 32.5 cm | 184 Pages">
+    </a>
   </div>
   <div class="product-details">
     <h3>Sundaram Winner Jumbo Book Size- 20.3 x 32.5 cm | 184 Pages<br> &#8203;</h3>
@@ -353,7 +375,9 @@
  <div class="card" data-id="prod-1748513881318-2038">
   <div class="discount-banner">SAVE ₹10 (11% OFF)</div>
   <div class="product-image">
-    <img src="./office Stationery1/page6/White Envelope.webp" alt="White Envelope 11 inch x 5 inch | Pack of 50">
+   <a href="product/White Envelope 11 inch x 5 inch.html">
+     <img src="./office Stationery1/page6/White Envelope.webp" alt="White Envelope 11 inch x 5 inch | Pack of 50">
+   </a>
   </div>
   <div class="product-details">
     <h3>White Envelope 11 inch x 5 inch | Pack of 50 <br> &#8203;</h3>
