--- a/office statioery7.html
+++ b/office statioery7.html
@@ -63,12 +63,16 @@
 
 
   <div class="products">
+
+
   
-    <a href="#"class="card">
+    
      <div class="card" data-id="prod-1748514156984-5420">
   <div class="discount-banner">SAVE ₹11 (11% OFF)</div>
   <div class="product-image">
-    <img src="./office Stationery1/page7/Cello Pinpoint Ball Pen.webp" alt="Cello Pinpoint Ball Pen Tip 0.6 mm | Pack of 10 Pen">
+    <a href="product/Cello Pinpoint Ball Pen Tip 0.6 mm.html">
+      <img src="./office Stationery1/page7/Cello Pinpoint Ball Pen.webp" alt="Cello Pinpoint Ball Pen Tip 0.6 mm | Pack of 10 Pen">
+    </a>
   </div>
   <div class="product-details">
     <h3>Cello Pinpoint Ball Pen Tip 0.6 mm | Pack of 10 Pen<br> &#8203;</h3>
@@ -86,14 +90,16 @@
     </div>
   </div>
 </div>
-</a>
 
 
-<a href="#"class="card">
+
+
   <div class="card" data-id="prod-1748514292655-3590">
   <div class="discount-banner">SAVE ₹6 (6% OFF)</div>
   <div class="product-image">
-    <img src="./office Stationery1/page7/Kangaro Stapler Pin 2324-H.webp" alt="Kangaro Stapler Pin 23/24-H 24 mm (15/16″)">
+   <a href="product/Kangaro Stapler.html">
+     <img src="./office Stationery1/page7/Kangaro Stapler Pin 2324-H.webp" alt="Kangaro Stapler Pin 23/24-H 24 mm (15/16″)">
+   </a>
   </div>
   <div class="product-details">
     <h3>Kangaro Stapler Pin 23/24-H 24 mm (15/16)<br> &#8203;</h3>
@@ -111,15 +117,17 @@
     </div>
   </div>
 </div>
-</a>
 
 
 
-<a href="#"class="card">
+
+
  <div class="card" data-id="prod-1748514397749-5164">
   <div class="discount-banner">SAVE ₹6 (6% OFF)</div>
   <div class="product-image">
-    <img src="./office Stationery1/page7/Cello Maxriter Ball Pen.webp" alt="Cello Maxriter Ball Pen Tip 0.6 mm | Pack of 10 Pen">
+   <a href="product/Cello Maxriter Ball Pen Tip 0.6 mm.html">
+     <img src="./office Stationery1/page7/Cello Maxriter Ball Pen.webp" alt="Cello Maxriter Ball Pen Tip 0.6 mm | Pack of 10 Pen">
+   </a>
   </div>
   <div class="product-details">
     <h3>Cello Maxriter Ball Pen Tip 0.6 mm | Pack of 10 Pen<br> &#8203;</h3>
@@ -137,15 +145,17 @@
     </div>
   </div>
 </div>
-</a>
 
 
 
-<a href="#"class="card">
+
+
  <div class="card" data-id="prod-1748514446083-8048">
   <div class="discount-banner">SAVE ₹6 (6% OFF)</div>
   <div class="product-image">
-    <img src="./office Stationery1/page7/Camlin CD-DVD Marker.webp" alt="Camlin CD-DVD Marker Black Ink | Pack of 10">
+    <a href="product/Camlin CD-DVD Marker Black Ink.html">
+      <img src="./office Stationery1/page7/Camlin CD-DVD Marker.webp" alt="Camlin CD-DVD Marker Black Ink | Pack of 10">
+    </a>
   </div>
   <div class="product-details">
     <h3>Camlin CD-DVD Marker Black Ink | Pack of 10 <br> &#8203; </h3>
@@ -163,15 +173,17 @@
     </div>
   </div>
 </div>
-</a>
 
 
 
-<a href="#"class="card">
+
+
  <div class="card" data-id="prod-1748514505222-9271">
   <div class="discount-banner">SAVE ₹6 (6% OFF)</div>
   <div class="product-image">
-    <img src="./office Stationery1/page7/Camlin Kokuyo Highlighter – Pack of 5 Assorted Colors.webp" alt="Camlin Kokuyo Highlighter – Pack of 5 Assorted Colors">
+    <a href="product/Camlin Kokuyo Highlighter.html">
+      <img src="./office Stationery1/page7/Camlin Kokuyo Highlighter – Pack of 5 Assorted Colors.webp" alt="Camlin Kokuyo Highlighter – Pack of 5 Assorted Colors">
+    </a>
   </div>
   <div class="product-details">
     <h3>Camlin Kokuyo Highlighter – Pack of 5 Assorted Colors<br> &#8203;</h3>
@@ -189,14 +201,15 @@
     </div>
   </div>
 </div>
-</a>
 
 
-<a href="#"class="card">
+
  <div class="card" data-id="prod-1748514563821-5809">
   <div class="discount-banner">SAVE ₹6 (6% OFF)</div>
   <div class="product-image">
-    <img src="./office Stationery1/page7/Camlin CD-DVD Marker1.webp" alt="Camlin CD-DVD Marker Blue Ink | Pack of 10">
+    <a href="product/Camlin CD-DVD Marker Blue Ink.html">
+      <img src="./office Stationery1/page7/Camlin CD-DVD Marker1.webp" alt="Camlin CD-DVD Marker Blue Ink | Pack of 10">
+    </a>
   </div>
   <div class="product-details">
     <h3>Camlin CD-DVD Marker Blue Ink |<br> &#8203; Pack<br> &#8203; of 10
@@ -216,17 +229,20 @@
     </div>
   </div>
 </div>
-</a>
 
 
-<a href="#"class="card">
+
+
+
  <div class="card" data-id="prod-1748514623191-5785">
   <div class="discount-banner">SAVE ₹6 (6% OFF)</div>
   <div class="product-image">
-    <img src="./office Stationery1/page7/Camlin CD-DVD Marker1.webp" alt="Camlin CD-DVD Marker Blue Ink | Pack of 10">
+   <a href="product/Camlin CD-DVD Marker Red Ink.html">
+     <img src="./office Stationery1/page7/Camlin CD-DVD Marker1.webp" alt="Camlin CD-DVD Marker Red Ink | Pack of 10">
+   </a>
   </div>
   <div class="product-details">
-    <h3>Camlin CD-DVD Marker Blue Ink |<br> &#8203; Pack <br> &#8203; of 10</h3>
+    <h3>Camlin CD-DVD Marker Red Ink | <br> &#8203; Pack <br> &#8203; of 10</h3>
    <div class="price-buttons">
       <button class="mrp" data-mrp="100">MRP ₹100</button>
       <button class="pay" data-pay="89">PAY ₹89</button> <!-- ✅ FIXED -->
@@ -241,17 +257,21 @@
     </div>
   </div>
 </div>
-</a>
 
 
-<a href="#"class="card">
+
+
+
+
 <div class="card" data-id="prod-1748514642853-160">
   <div class="discount-banner">SAVE ₹6 (6% OFF)</div>
   <div class="product-image">
-    <img src="./office Stationery1/page7/Camlin CD-DVD Marker1.webp" alt="Camlin CD-DVD Marker Blue Ink | Pack of 10">
+    <a href="product/Camlin CD-DVD Marker Green Ink.html">
+      <img src="./office Stationery1/page7/Camlin CD-DVD Marker1.webp" alt="Camlin CD-DVD Marker Green Ink | Pack of 10">
+    </a>
   </div>
   <div class="product-details">
-    <h3>Camlin CD-DVD Marker Blue Ink |<br> &#8203; Pack <br> &#8203; of 10</h3>
+    <h3>Camlin CD-DVD Marker Green Ink | <br> &#8203; Pack <br> &#8203; of 10</h3>
     <div class="price-buttons">
       <button class="mrp" data-mrp="100">MRP ₹100</button>
       <button class="pay" data-pay="90">PAY ₹90</button> <!-- ✅ FIXED -->
@@ -266,15 +286,17 @@
     </div>
   </div>
 </div>
-</a>
 
 
 
-<a href="#"class="card">
+
+
  <div class="card" data-id="prod-1748514710325-4390">
   <div class="discount-banner">SAVE ₹6 (6% OFF)</div>
   <div class="product-image">
-    <img src="./office Stationery1/page7/Classmate Octane Neon Gel Pens.webp" alt="Classmate Octane Neon Gel Pens Ink – Blue | Pack of 11">
+   <a href="product/Classmate Octane Neon Gel Pens Ink – Blue.html">
+     <img src="./office Stationery1/page7/Classmate Octane Neon Gel Pens.webp" alt="Classmate Octane Neon Gel Pens Ink – Blue | Pack of 11">
+   </a>
   </div>
   <div class="product-details">
     <h3>Classmate Octane Neon Gel Pens Ink – Blue | Pack of 11<br> &#8203;</h3>
@@ -292,15 +314,17 @@
     </div>
   </div>
 </div>
-</a>
 
 
 
-<a href="#"class="card">
+
+
  <div class="card" data-id="prod-1748514780883-7237">
   <div class="discount-banner">SAVE ₹6 (6% OFF)</div>
   <div class="product-image">
-    <img src="./office Stationery1/page7/Flair Sparkle Glitter Gel Pen.webp" alt="Flair Sparkle Glitter Gel Pen Set of 10 Colours">
+    <a href="product/Flair Sparkle Glitter Gel Pen Set of 10 Colours.html">
+      <img src="./office Stationery1/page7/Flair Sparkle Glitter Gel Pen.webp" alt="Flair Sparkle Glitter Gel Pen Set of 10 Colours">
+    </a>
   </div>
   <div class="product-details">
     <h3>Flair Sparkle Glitter Gel Pen Set of 10 Colours<br> &#8203;</h3>
@@ -318,15 +342,16 @@
     </div>
   </div>
 </div>
-</a>
 
 
 
-<a href="#"class="card">
+
  <div class="card" data-id="prod-1748514829596-6906">
   <div class="discount-banner">SAVE ₹6 (6% OFF)</div>
   <div class="product-image">
-    <img src="./office Stationery1/page7/Camlin Tora Ball Pen.webp" alt="Camlin Tora Ball Pen Pack of 8 Pen">
+    <a href="product/Camlin Tora Ball Pen Pack of 8 Pen.html">
+      <img src="./office Stationery1/page7/Camlin Tora Ball Pen.webp" alt="Camlin Tora Ball Pen Pack of 8 Pen">
+    </a>
   </div>
   <div class="product-details">
     <h3>Camlin Tora Ball Pen Pack of 8 Pen <br> &#8203;</h3>
@@ -344,15 +369,17 @@
     </div>
   </div>
 </div>
-</a>
 
 
 
-<a href="#"class="card">
+
+
  <div class="card" data-id="prod-1748514883096-5778">
   <div class="discount-banner">SAVE ₹6 (6% OFF)</div>
   <div class="product-image">
-    <img src="./office Stationery1/page7/JK Bond A4 Size Paper.webp" alt="JK Bond A4 Size Paper 100 GSM | 100 Sheets">
+    <a href="product/JK Bond A4 Size Paper 100 GSM.html">
+      <img src="./office Stationery1/page7/JK Bond A4 Size Paper.webp" alt="JK Bond A4 Size Paper 100 GSM | 100 Sheets">
+    </a>
   </div>
   <div class="product-details">
     <h3>JK Bond A4 Size Paper 100 GSM | 100 Sheets<br> &#8203;</h3>
@@ -370,7 +397,10 @@
     </div>
   </div>
 </div>
-</a>
+
+
+
+
 
   </div>
 
