--- a/product/Cello Maxriter Ball Pen Tip 0.6 mm.html
+++ b/product/Cello Maxriter Ball Pen Tip 0.6 mm.html
@@ -31,12 +31,12 @@
 
 
 
-<div class="product-detail-card" data-id="prod-1750677486079">
+<div class="product-detail-card" data-id="prod-1750760004459">
   <div class="product-image-section position-relative">
     <div class="discount-banner1">SAVE ₹11 (11% OFF)</div>
     <button class="zoom-icon-btn" onclick="activateZoom()">🔍</button>
     <div class="img-magnifier-container">
-      <img id="mainImage" src="/asset/office statioery/Cello Pinpoint Ball Pen.webp " alt="Cello Pinpoint Ball Pen Tip 0.6 mm | Pack of 10 Pen" />
+      <img id="mainImage" src="/asset/office statioery/Cello Maxriter Ball Pen (1).webp" alt="Cello Maxriter Ball Pen Tip 0.6 mm | Pack of 10 Pen" />
     </div>
     <div class="thumbnail-row">
       
@@ -44,13 +44,13 @@
   </div>
 
   <div class="product-info-section">
-    <h2 class="title">Cello Pinpoint Ball Pen Tip 0.6 mm | Pack of 10 Pen</h2>
+    <h2 class="title">Cello Maxriter Ball Pen Tip 0.6 mm | Pack of 10 Pen</h2>
     <div class="price-buttons1">
       <button class="mrp" data-mrp="100">MRP ₹100</button>
       <button class="pay" data-pay="89">PAY ₹89</button>
-      <div class="wishlist-toggle" data-id="prod-1750677486079">
-        <input type="checkbox" class="heart-checkbox" id="wishlist-prod-1750677486079">
-        <label for="wishlist-prod-1750677486079" class="wishlist-label">🤍</label>
+      <div class="wishlist-toggle" data-id="prod-1750760004459">
+        <input type="checkbox" class="heart-checkbox" id="wishlist-prod-1750760004459">
+        <label for="wishlist-prod-1750760004459" class="wishlist-label">🤍</label>
       </div>
     </div>
     <div class="cart-controls">
@@ -60,7 +60,7 @@
     <p><strong>CATEGORY:</strong> Office Stationery, School Stationery</p>
     <div class="product-description">
       <h4>Product Details</h4>
-      <p>The Cello Pinpoint Ball Pen, with its 0.6 mm tip, comes in a convenient pack of 10. These pens are known for their unique Elasto grip, which ensures pressure-free writing, making them comfortable for long sessions, especially during exams. They feature a Lubriflow ink system for ultra-smooth and consistent writing.</p>
+      <p>This pack of 10 Cello Maxriter Ball Pens features a precise 0.6 mm tip for smooth and consistent writing. Ideal for everyday use at home, school, or the office, these pens provide a comfortable grip and reliable ink flow.</p>
     </div>
   </div>
 </div>
