--- a/product/Classmate Octane Neon Gel Pens Ink – Blue.html
+++ b/product/Classmate Octane Neon Gel Pens Ink – Blue.html
@@ -31,12 +31,12 @@
 
 
 
-<div class="product-detail-card" data-id="prod-1750677486079">
+<div class="product-detail-card" data-id="prod-1750762009353">
   <div class="product-image-section position-relative">
-    <div class="discount-banner1">SAVE ₹11 (11% OFF)</div>
+    <div class="discount-banner1">SAVE ₹10 (10% OFF)</div>
     <button class="zoom-icon-btn" onclick="activateZoom()">🔍</button>
     <div class="img-magnifier-container">
-      <img id="mainImage" src="/asset/office statioery/Cello Pinpoint Ball Pen.webp " alt="Cello Pinpoint Ball Pen Tip 0.6 mm | Pack of 10 Pen" />
+      <img id="mainImage" src="/asset/office statioery/Classmate Octane Neon Gel Pens.webp" alt="Classmate Octane Neon Gel Pens Ink – Blue | Pack of 11" />
     </div>
     <div class="thumbnail-row">
       
@@ -44,13 +44,13 @@
   </div>
 
   <div class="product-info-section">
-    <h2 class="title">Cello Pinpoint Ball Pen Tip 0.6 mm | Pack of 10 Pen</h2>
+    <h2 class="title">Classmate Octane Neon Gel Pens Ink – Blue | Pack of 11</h2>
     <div class="price-buttons1">
       <button class="mrp" data-mrp="100">MRP ₹100</button>
-      <button class="pay" data-pay="89">PAY ₹89</button>
-      <div class="wishlist-toggle" data-id="prod-1750677486079">
-        <input type="checkbox" class="heart-checkbox" id="wishlist-prod-1750677486079">
-        <label for="wishlist-prod-1750677486079" class="wishlist-label">🤍</label>
+      <button class="pay" data-pay="90">PAY ₹90</button>
+      <div class="wishlist-toggle" data-id="prod-1750762009353">
+        <input type="checkbox" class="heart-checkbox" id="wishlist-prod-1750762009353">
+        <label for="wishlist-prod-1750762009353" class="wishlist-label">🤍</label>
       </div>
     </div>
     <div class="cart-controls">
@@ -60,10 +60,11 @@
     <p><strong>CATEGORY:</strong> Office Stationery, School Stationery</p>
     <div class="product-description">
       <h4>Product Details</h4>
-      <p>The Cello Pinpoint Ball Pen, with its 0.6 mm tip, comes in a convenient pack of 10. These pens are known for their unique Elasto grip, which ensures pressure-free writing, making them comfortable for long sessions, especially during exams. They feature a Lubriflow ink system for ultra-smooth and consistent writing.</p>
+      <p>This pack of 10 Camlin CD-DVD markers with red ink provides clear and durable labeling for your media. The quick-drying, smudge-proof, and fade-resistant ink ensures your markings remain legible over time on CDs, DVDs, and other surfaces.</p>
     </div>
   </div>
 </div>
+
 
 
 
@@ -94,19 +95,18 @@
 
 
 
-
-    <div class="card" data-id="prod-1748506145646-5594">
-  <div class="discount-banner">SAVE ₹2 (5% OFF)</div>
+ <div class="card" data-id="prod-1748503880446-5480">
+  <div class="discount-banner">SAVE ₹3 (11% OFF)</div>
   <div class="product-image">
-    <a href="product/DOMS Y1+ Pencil.html">
-      <img src="./office Stationery1/page3/DOMS Y1+ Pencil.webp" alt="DOMS Y1+ Pencil">
+    <a href="product/Kangaro Stapler Pin.html">
+      <img src="./office Stationery1/page1/Kangaro Stapler Pin 10-1M.webp" alt="Kangaro Stapler Pin 10-1M">
     </a>
   </div>
   <div class="product-details">
-    <h3>DOMS Y1+ Pencil</h3>
+    <h3>Kangaro Stapler Pin 10-1M</h3>
    <div class="price-buttons">
-      <button class="mrp" data-mrp="40">MRP ₹40</button>
-      <button class="pay" data-pay="38">PAY ₹38</button> <!-- ✅ FIXED -->
+      <button class="mrp" data-mrp="25">MRP ₹25</button>
+      <button class="pay" data-pay="23">PAY ₹23</button> <!-- ✅ FIXED -->
       <label class="wishlist">
         <input type="checkbox" class="heart-checkbox">
         <span class="heart-icon">🤍</span>
@@ -122,18 +122,18 @@
 
 
 
- <div class="card" data-id="prod-1748506207275-1153">
-  <div class="discount-banner">SAVE ₹7 (15% OFF)</div>
+ <div class="card" data-id="prod-1748504093559-4418">
+  <div class="discount-banner">SAVE ₹2 (7% OFF)</div>
   <div class="product-image">
-    <a href="/product/Sundaram Single Line Notebook.html">
-      <img src="./office Stationery1/page3/Sundaram Single Line Notebook.webp" alt="Sundaram Single Line Notebook">
+    <a href="/product/Camlin Stamp Pad.html">
+      <img src="./office Stationery1/page1/Camlin Stamp Pad Ink – Blue.webp" alt="Camlin Stamp Pad | Ink – Blue">
     </a>
   </div>
   <div class="product-details">
-    <h3>Sundaram Single Line Notebook</h3>
+    <h3>Camlin Stamp Pad | Ink – Blue</h3>
    <div class="price-buttons">
-      <button class="mrp" data-mrp="50">MRP ₹50</button>
-      <button class="pay" data-pay="42">PAY ₹42</button> <!-- ✅ FIXED -->
+      <button class="mrp" data-mrp="30">MRP ₹30</button>
+      <button class="pay" data-pay="28">PAY ₹28</button> <!-- ✅ FIXED -->
       <label class="wishlist">
         <input type="checkbox" class="heart-checkbox">
         <span class="heart-icon">🤍</span>
@@ -149,18 +149,18 @@
 
 
 
- <div class="card" data-id="prod-1748506269815-1865">
-  <div class="discount-banner">SAVE ₹10 (20% OFF)</div>
+  <div class="card" data-id="prod-1748504200710-4571">
+  <div class="discount-banner">SAVE ₹5 (14% OFF)</div>
   <div class="product-image">
-    <a href="/product/Binder Clip 25 mm.html">
-      <img src="./office Stationery1/page3/Binder Clip 25 mm – 1 Pack of 12.webp" alt="Binder Clip 25 mm – 1 Pack of 12">
+    <a href="/product/Sundaram A5.html">
+      <img src="./office Stationery1/page1/Sundaram A5 Note Book.webp" alt="Sundaram A5 Note Book">
     </a>
   </div>
   <div class="product-details">
-    <h3>Binder Clip 25 mm – 1 Pack of 12</h3>
-    <div class="price-buttons">
-      <button class="mrp" data-mrp="50">MRP ₹50</button>
-      <button class="pay" data-pay="40">PAY ₹40</button> <!-- ✅ FIXED -->
+    <h3>Sundaram A5 Note Book</h3>
+<div class="price-buttons">
+      <button class="mrp" data-mrp="35">MRP ₹35</button>
+      <button class="pay" data-pay="30">PAY ₹30</button> <!-- ✅ FIXED -->
       <label class="wishlist">
         <input type="checkbox" class="heart-checkbox">
         <span class="heart-icon">🤍</span>
@@ -175,18 +175,19 @@
 
 
 
-<div class="card" data-id="prod-1748506323909-1654">
-  <div class="discount-banner">SAVE ₹3 (7% OFF)</div>
+
+<div class="card" data-id="prod-1748504348385-7840">
+  <div class="discount-banner">SAVE ₹3 (9% OFF)</div>
   <div class="product-image">
-   <a href="product/Camlin Kokuyo Paste.html">
-     <img src="./office Stationery1/page3/Camlin Kokuyo Paste – 150 ml.webp" alt="Camlin Kokuyo Paste – 150 ml">
-   </a>
+    <a href="/product/Camlin Stamp Pad Ink.html">
+      <img src="./office Stationery1/page1/Camlin Stamp Pad  Ink – Blue1.webp" alt="Camlin Stamp Pad  Ink – Blue">
+    </a>
   </div>
   <div class="product-details">
-    <h3>Camlin Kokuyo Paste – 150 ml</h3>
+    <h3>Camlin Stamp Pad  Ink – Blue</h3>
     <div class="price-buttons">
-      <button class="mrp" data-mrp="45">MRP ₹45</button>
-      <button class="pay" data-pay="42">PAY ₹42</button> <!-- ✅ FIXED -->
+      <button class="mrp" data-mrp="35">MRP ₹35</button>
+      <button class="pay" data-pay="32">PAY ₹32</button> <!-- ✅ FIXED -->
       <label class="wishlist">
         <input type="checkbox" class="heart-checkbox">
         <span class="heart-icon">🤍</span>
@@ -198,16 +199,6 @@
     </div>
   </div>
 </div>
-
-
-
-
-
-
-
-
-
-
 
 
 
