--- a/product/Camlin CD-DVD Marker Black Ink.html
+++ b/product/Camlin CD-DVD Marker Black Ink.html
@@ -31,12 +31,12 @@
 
 
 
-<div class="product-detail-card" data-id="prod-1750677486079">
+<div class="product-detail-card" data-id="prod-1750760224647">
   <div class="product-image-section position-relative">
     <div class="discount-banner1">SAVE ₹11 (11% OFF)</div>
     <button class="zoom-icon-btn" onclick="activateZoom()">🔍</button>
     <div class="img-magnifier-container">
-      <img id="mainImage" src="/asset/office statioery/Cello Pinpoint Ball Pen.webp " alt="Cello Pinpoint Ball Pen Tip 0.6 mm | Pack of 10 Pen" />
+      <img id="mainImage" src="/asset/office statioery/Camlin CD-DVD Marker.webp" alt="Camlin CD-DVD Marker Black Ink | Pack of 10" />
     </div>
     <div class="thumbnail-row">
       
@@ -44,13 +44,13 @@
   </div>
 
   <div class="product-info-section">
-    <h2 class="title">Cello Pinpoint Ball Pen Tip 0.6 mm | Pack of 10 Pen</h2>
+    <h2 class="title">Camlin CD-DVD Marker Black Ink | Pack of 10</h2>
     <div class="price-buttons1">
       <button class="mrp" data-mrp="100">MRP ₹100</button>
       <button class="pay" data-pay="89">PAY ₹89</button>
-      <div class="wishlist-toggle" data-id="prod-1750677486079">
-        <input type="checkbox" class="heart-checkbox" id="wishlist-prod-1750677486079">
-        <label for="wishlist-prod-1750677486079" class="wishlist-label">🤍</label>
+      <div class="wishlist-toggle" data-id="prod-1750760224647">
+        <input type="checkbox" class="heart-checkbox" id="wishlist-prod-1750760224647">
+        <label for="wishlist-prod-1750760224647" class="wishlist-label">🤍</label>
       </div>
     </div>
     <div class="cart-controls">
@@ -60,10 +60,14 @@
     <p><strong>CATEGORY:</strong> Office Stationery, School Stationery</p>
     <div class="product-description">
       <h4>Product Details</h4>
-      <p>The Cello Pinpoint Ball Pen, with its 0.6 mm tip, comes in a convenient pack of 10. These pens are known for their unique Elasto grip, which ensures pressure-free writing, making them comfortable for long sessions, especially during exams. They feature a Lubriflow ink system for ultra-smooth and consistent writing.</p>
+      <p>This pack of 10 Camlin CD-DVD markers with black ink provides clear and durable labeling for your media. The quick-drying, smudge-proof, and fade-resistant ink ensures your markings remain legible over time on CDs, DVDs, and other surfaces.</p>
     </div>
   </div>
 </div>
+
+
+
+
 
 
 
@@ -94,73 +98,18 @@
 
 
 
-
-    <div class="card" data-id="prod-1748506145646-5594">
-  <div class="discount-banner">SAVE ₹2 (5% OFF)</div>
+<div class="card" data-id="prod-1748507802416-3422">
+  <div class="discount-banner">SAVE ₹8 (13% OFF)</div>
   <div class="product-image">
-    <a href="product/DOMS Y1+ Pencil.html">
-      <img src="./office Stationery1/page3/DOMS Y1+ Pencil.webp" alt="DOMS Y1+ Pencil">
+    <a href="product/Reynolds 045 Ballpen Ink – Blue.html">
+      <img src="./office Stationery1/page4/Reynolds 045 Ballpen.webp" alt="Reynolds 045 Ballpen Ink – Blue | Pack of 10">
     </a>
   </div>
   <div class="product-details">
-    <h3>DOMS Y1+ Pencil</h3>
-   <div class="price-buttons">
-      <button class="mrp" data-mrp="40">MRP ₹40</button>
-      <button class="pay" data-pay="38">PAY ₹38</button> <!-- ✅ FIXED -->
-      <label class="wishlist">
-        <input type="checkbox" class="heart-checkbox">
-        <span class="heart-icon">🤍</span>
-      </label>
-    </div>
-    <div class="cart-actions">
-      <button class="add-to-cart">ADD TO CART</button>
-      <input type="number" class="quantity-input" value="1" min="1">
-    </div>
-  </div>
-</div>
-
-
-
-
- <div class="card" data-id="prod-1748506207275-1153">
-  <div class="discount-banner">SAVE ₹7 (15% OFF)</div>
-  <div class="product-image">
-    <a href="/product/Sundaram Single Line Notebook.html">
-      <img src="./office Stationery1/page3/Sundaram Single Line Notebook.webp" alt="Sundaram Single Line Notebook">
-    </a>
-  </div>
-  <div class="product-details">
-    <h3>Sundaram Single Line Notebook</h3>
-   <div class="price-buttons">
-      <button class="mrp" data-mrp="50">MRP ₹50</button>
-      <button class="pay" data-pay="42">PAY ₹42</button> <!-- ✅ FIXED -->
-      <label class="wishlist">
-        <input type="checkbox" class="heart-checkbox">
-        <span class="heart-icon">🤍</span>
-      </label>
-    </div>
-    <div class="cart-actions">
-      <button class="add-to-cart">ADD TO CART</button>
-      <input type="number" class="quantity-input" value="1" min="1">
-    </div>
-  </div>
-</div>
-
-
-
-
- <div class="card" data-id="prod-1748506269815-1865">
-  <div class="discount-banner">SAVE ₹10 (20% OFF)</div>
-  <div class="product-image">
-    <a href="/product/Binder Clip 25 mm.html">
-      <img src="./office Stationery1/page3/Binder Clip 25 mm – 1 Pack of 12.webp" alt="Binder Clip 25 mm – 1 Pack of 12">
-    </a>
-  </div>
-  <div class="product-details">
-    <h3>Binder Clip 25 mm – 1 Pack of 12</h3>
+    <h3>Reynolds 045 Ballpen Ink – Blue | Pack of 10 <br> &#8203;</h3>
     <div class="price-buttons">
-      <button class="mrp" data-mrp="50">MRP ₹50</button>
-      <button class="pay" data-pay="40">PAY ₹40</button> <!-- ✅ FIXED -->
+      <button class="mrp" data-mrp="60">MRP ₹60</button>
+      <button class="pay" data-pay="52">PAY ₹52</button> <!-- ✅ FIXED -->
       <label class="wishlist">
         <input type="checkbox" class="heart-checkbox">
         <span class="heart-icon">🤍</span>
@@ -175,18 +124,19 @@
 
 
 
-<div class="card" data-id="prod-1748506323909-1654">
-  <div class="discount-banner">SAVE ₹3 (7% OFF)</div>
+
+ <div class="card" data-id="prod-1748507881505-5496">
+  <div class="discount-banner">SAVE ₹5 (9% OFF)</div>
   <div class="product-image">
-   <a href="product/Camlin Kokuyo Paste.html">
-     <img src="./office Stationery1/page3/Camlin Kokuyo Paste – 150 ml.webp" alt="Camlin Kokuyo Paste – 150 ml">
-   </a>
+    <a href="product/Kangaro Mini 10 Stapler.html">
+      <img src="./office Stationery1/page4/Kangaro Mini 10 Stapler.webp" alt="Kangaro Mini 10 Stapler">
+    </a>
   </div>
   <div class="product-details">
-    <h3>Camlin Kokuyo Paste – 150 ml</h3>
+    <h3>Kangaro Mini 10 Stapler<br> &#8203;<br> &#8203;</h3>
     <div class="price-buttons">
-      <button class="mrp" data-mrp="45">MRP ₹45</button>
-      <button class="pay" data-pay="42">PAY ₹42</button> <!-- ✅ FIXED -->
+      <button class="mrp" data-mrp="57">MRP ₹57</button>
+      <button class="pay" data-pay="52">PAY ₹52</button> <!-- ✅ FIXED -->
       <label class="wishlist">
         <input type="checkbox" class="heart-checkbox">
         <span class="heart-icon">🤍</span>
@@ -198,6 +148,63 @@
     </div>
   </div>
 </div>
+
+
+
+
+
+
+ <div class="card" data-id="prod-1748507973761-9568">
+  <div class="discount-banner">SAVE ₹6 (10% OFF)</div>
+  <div class="product-image">
+    <a href="product/Classmate Saathi Single line Notebook A4 Size.html">
+      <img src="./office Stationery1/page4/Classmate Saathi Single line Notebook.webp" alt="Classmate Saathi Single line Notebook A4 Size | 172 Page ">
+    </a>
+  </div>
+  <div class="product-details">
+    <h3>Classmate Saathi Single line Notebook A4 Size | 172 Page <br> &#8203;</h3>
+  <div class="price-buttons">
+      <button class="mrp" data-mrp="60">MRP ₹60</button>
+      <button class="pay" data-pay="54">PAY ₹54</button> <!-- ✅ FIXED -->
+      <label class="wishlist">
+        <input type="checkbox" class="heart-checkbox">
+        <span class="heart-icon">🤍</span>
+      </label>
+    </div>
+    <div class="cart-actions">
+      <button class="add-to-cart">ADD TO CART</button>
+      <input type="number" class="quantity-input" value="1" min="1">
+    </div>
+  </div>
+</div>
+
+
+
+
+ <div class="card" data-id="prod-1748508055097-6630">
+  <div class="discount-banner">SAVE ₹6 (10% OFF)</div>
+  <div class="product-image">
+    <a href="product/Natraj Classic Blue Ball Pen Fine.html">
+      <img src="./office Stationery1/page4/Natraj Classic Blue Ball Pen.webp" alt="Natraj Classic Blue Ball Pen Fine Tipped | Pack of 20">
+    </a>
+  </div>
+  <div class="product-details">
+    <h3>Natraj Classic Blue Ball Pen Fine Tipped | Pack of 20<br> &#8203;</h3>
+    <div class="price-buttons">
+      <button class="mrp" data-mrp="60">MRP ₹60</button>
+      <button class="pay" data-pay="54">PAY ₹54</button> <!-- ✅ FIXED -->
+      <label class="wishlist">
+        <input type="checkbox" class="heart-checkbox">
+        <span class="heart-icon">🤍</span>
+      </label>
+    </div>
+    <div class="cart-actions">
+      <button class="add-to-cart">ADD TO CART</button>
+      <input type="number" class="quantity-input" value="1" min="1">
+    </div>
+  </div>
+</div>
+
 
 
 
