Final code without conflict

--- a/product/Cello Pinpoint Ball Pen Tip 0.6 mm.html
+++ b/product/Cello Pinpoint Ball Pen Tip 0.6 mm.html
@@ -36,7 +36,7 @@
     <div class="discount-banner1">SAVE ₹11 (11% OFF)</div>
     <button class="zoom-icon-btn" onclick="activateZoom()">🔍</button>
     <div class="img-magnifier-container">
-      <img id="mainImage" src="/asset/office statioery/cell " alt="Cello Pinpoint Ball Pen Tip 0.6 mm | Pack of 10 Pen" />
+      <img id="mainImage" src="/asset/office statioery/Cello Pinpoint Ball Pen.webp " alt="Cello Pinpoint Ball Pen Tip 0.6 mm | Pack of 10 Pen" />
     </div>
     <div class="thumbnail-row">
       
