--- a/Cleaning-&-Household1.html
+++ b/Cleaning-&-Household1.html
@@ -98,7 +98,7 @@
     </div>
     <div class="cart-actions">
       <button class="add-to-cart">ADD TO CART</button>
-      <input type="number" class="quantity-input" value="1" min="1">
+      <input type="number" class="quantity-input" value="1" min="1" max="99" >
     </div>
   </div>
 </div>
@@ -123,7 +123,7 @@
     </div>
     <div class="cart-actions">
       <button class="add-to-cart">ADD TO CART</button>
-      <input type="number" class="quantity-input" value="1" min="1">
+      <input type="number" class="quantity-input" value="1" min="1" max="99" >
     </div>
   </div>
 </div>
@@ -148,7 +148,7 @@
     </div>
     <div class="cart-actions">
       <button class="add-to-cart">ADD TO CART</button>
-      <input type="number" class="quantity-input" value="1" min="1">
+      <input type="number" class="quantity-input" value="1" min="1" max="99" >
     </div>
   </div>
 </div>
