added latest changes

--- a/test_max_qty_display.html
+++ b/test_max_qty_display.html
@@ -22,7 +22,7 @@
             width: 30px;
             height: 30px;
             border-radius: 50%;
-            border: 1px solid #ddd;
+            border: 1px solid #b3b3b3;
             background: white;
             cursor: pointer;
         }
