Fix auth dropdown labels, responsive grids, add-to-cart sizing

--- a/Header.html
+++ b/Header.html
@@ -30,7 +30,7 @@
         LOGIN / REGISTER
       </a>
       <ul class="dropdown-menu dropdown-menu-end">
-        <li><a class="dropdown-item" href="login.php">Customer Login / Register</a></li>
+        <li><a class="dropdown-item" href="login.php">Customer Login</a></li>
         <li><a class="dropdown-item" href="seller/login.php">Seller Login</a></li>
       </ul>
     </div>
