--- a/Header.html
+++ b/Header.html
@@ -62,47 +62,42 @@
   </a>
 </div>
 
-    <!-- Search Form -->
-    <form class="d-flex flex-grow-1 mx-4" role="search">
-     <div class="input-group w-100 flex-wrap">
-
-
-        <!-- DESKTOP Dropdown -->
-        <div class="dropdown-desktop">
-          <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown">
-            All 
-          </button>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Packing Material</a></li>
-            <li><a class="dropdown-item" href="Kichen1.html">Kitchen</a></li>
-            <li><a class="dropdown-item" href="Other1.html">Other</a></li>
-            <li><a class="dropdown-item" href="#">All</a></li>
-            
-          </ul>
-        </div>
-
-        <!-- MOBILE Dropdown -->
-<div class="dropdown-mobile">
-  <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown">
-    All
-  </button>
-  <ul class="dropdown-menu">
-    <li><a class="dropdown-item" href="#">Packing Material</a></li>
-    <li><a class="dropdown-item" href="Kichen1.html">Kitchen</a></li>
-    <li><a class="dropdown-item" href="#">Other</a></li>
-    <li><a class="dropdown-item" href="#">All</a></li>
-  </ul>
-</div>
-
-
-
-        <!-- Search Box -->
-        <input class="form-control" type="search" placeholder="Search for Products" aria-label="Search">
-        <button class="btn btn-primary" type="submit">
-          <i class="bi bi-search"></i>
-        </button>
-      </div>
-    </form>
+    <!-- Desktop: Search Bar — fills all space between logo and icons -->
+    <div class="search-bar-desktop d-none d-lg-flex my-2 my-lg-0" style="flex: 1 1 auto; min-width: 0; max-width: 1100px;">
+        <form class="d-flex position-relative w-100" style="padding: 0 8px;" role="search" autocomplete="off" onsubmit="return false;">
+            <div class="input-group flex-nowrap w-100">
+                <!-- DESKTOP Dropdown -->
+                <div class="dropdown dropdown-desktop">
+                    <button id="categoryDropdownDesktop" class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" data-selected-category="all">
+                        <span id="selectedCategoryDesktop">All Categories</span>
+                    </button>
+                    <ul class="dropdown-menu" style="z-index: 1100;">
+                        <li><a class="dropdown-item category-option" href="#" data-category="all">All Categories</a></li>
+                        <li><a class="dropdown-item" href="#">Packing Material</a></li>
+                        <li><a class="dropdown-item" href="Kichen1.html">Kitchen</a></li>
+                        <li><a class="dropdown-item" href="Other1.html">Other</a></li>
+                    </ul>
+                </div>
+                <!-- MOBILE Dropdown -->
+                <div class="dropdown dropdown-mobile">
+                    <button id="categoryDropdownMobile" class="btn btn-light dropdown-toggle mobile-category-btn" type="button" data-bs-toggle="dropdown" aria-expanded="false" data-selected-category="all">
+                        <span id="selectedCategoryMobile">All</span>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item category-option" href="#" data-category="all">All Categories</a></li>
+                        <li><a class="dropdown-item" href="#">Packing Material</a></li>
+                        <li><a class="dropdown-item" href="Kichen1.html">Kitchen</a></li>
+                        <li><a class="dropdown-item" href="#">Other</a></li>
+                    </ul>
+                </div>
+                <input class="form-control mobile-search-input" id="headerSearchInput" type="search" name="query" placeholder="Search for Products" aria-label="Search" autocomplete="off">
+                <button class="btn btn-primary mobile-search-btn" id="headerSearchBtn" type="button">
+                    <i class="bi bi-search"></i>
+                </button>
+            </div>
+            <div id="headerSearchResultsPopup" class="position-absolute w-100" style="z-index: 9999; display: none;"></div>
+        </form>
+    </div>
 
     <!-- Support & Cart -->
    <div class="d-none d-lg-flex align-items-center">
